C2LC-353: Reviewed and fixed hover + disabled styles in greyscale and high contrast themes.

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -185,7 +185,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
         outline: $c2lc-focus-indicator-width solid $c2lc-focus-indicator-color;
     }
 
-    &:hover {
+    &:not(.ProgramBlockEditor__character-position-button--disabled):hover {
         path.filled {
             fill: #F1AE5B;
         }
